# my-zone

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml  env.template
backend/: gunicorn.py  pyproject.toml
backend/app/: config.py  logging.py  main.py  schemas.py  security.py
backend/app/db/: init.py  models.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py
backend/app/routers/: __init__.py  auth.py  categories.py  data.py  icons.py  system.py  websites.py
backend/app/tasks/: db_backup.py  websites.py
depends/backend/: start.sh
depends/backend/docker-entrypoint.d/: start_app.sh
depends/nginx/: nginx-frontend.conf
depends/searxng/: settings.yml
depends/utils/: website_data_convert.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  categories.ts  common.ts  system.ts  websites.ts
frontend/src/components/common/: ConfirmDialog.vue  ConnectionStatusIndicator.vue  ContextMenu.vue  IconPicker.vue  Toast.vue
frontend/src/components/layout/: Header.vue  MainLayout.vue  Sidebar.vue
frontend/src/components/website/: MiniWebsiteCard.vue  WebsiteCard.vue  WebsiteSection.vue
frontend/src/composables/: useClickOutside.ts
frontend/src/stores/: auth.ts  theme.ts  toast.ts  ui.ts  websites.ts
frontend/src/types/: index.ts
frontend/src/views/: AuthLayout.vue  Home.vue  HomeLayout.vue  Login.vue
